--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                 <h3>Ending Points:</h3>
                 <b>X2: </b><input id='x2' type="text"><br><br>
                 <b>Y2: </b><input id='y2' type="text"><br><br>
-                <button id='submitBtn'>Calculate</button>
+                <button id='submitBtn'>Calculate</button><button id='reset'>Reset</button>
             </div>  
-                <h2 id='slop'></h2> 
-        </div>
+                <h2 id='slop'></h2>
+                <p id='massage'></p> 
+            </div>
         <div id="makeTable">
             <h3 class="head">Calculation Table</h3>
             <table id='myTable'>
@@ -29,6 +30,7 @@
             </table>
         </div>
     </div>
+
     <script src="index.js"></script>
 </body>
 </html>
